--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
